Support for closed draw objects

--- a/cart.org
+++ b/cart.org
@@ -46,12 +46,11 @@
     "Returns the xy points of clicked point (if clicked) as a list, or,
   start and end points of dragged region (if dragged) as a list of lists."
     (if (string-equal (car-or (read-event (or prompt "Click anywhere"))) "down-mouse-1")
-        (progn
-          (setq event (read-event))  ;; read the mouse up/drag event
-          (setq pos (event-start event))
-          (setq pose (event-end event))
-          (setq xy (posn-x-y pos))
-          (setq xye (posn-x-y pose))
+        (let* ((event (read-event))  ;; read the mouse up/drag event
+               (pos (event-start event))
+               (pose (event-end event))
+               (xy (posn-x-y pos))
+               (xye (posn-x-y pose)))
           (if (eq pos pose)
               (mapcar 'float (list (car xy) (cdr xy)))
             (list (mapcar 'float (list (car xy) (cdr xy)))
@@ -69,31 +68,30 @@
 #+begin_src emacs-lisp :tangle yes :results none
   (defun cart--xy2x0sl (x y)
     "Convert list of x and y points to x0 (intercept) and sl (slope)"
-    (let ((x1 (elt x 0))
-	  (x2 (elt x 1))
-	  (y1 (elt y 0))
-	  (y2 (elt y 1)))
-      (setq x0 (/ (- (* x1 y2) (* x2 y1)) (- x1 x2)))
-      (setq sl (/ (- y1 y2) (- x1 x2)))
+    (let* ((x1 (elt x 0))
+           (x2 (elt x 1))
+           (y1 (elt y 0))
+           (y2 (elt y 1))
+           (x0 (/ (- (* x1 y2) (* x2 y1)) (- x1 x2)))
+           (sl (/ (- y1 y2) (- x1 x2))))
       (list x0 sl)))
 
   (defun cart-calibrate ()
     "Conduct calibration to set the cart--XY_0sl variable"
     (interactive)
     (let* ((XY1 (cart--2dc "Point 1"))
-	   (xy1 (save-excursion (cart--gmc "Click on Point 1")))
-	   (XY2 (cart--2dc "Point 2"))
-	   (xy2 (save-excursion (cart--gmc "Click on Point 2"))))
-      (setq Xs (mapcar #'(lambda (x) (elt x 0)) (list XY1 XY2)))
-      (setq Ys (mapcar #'(lambda (x) (elt x 1)) (list XY1 XY2)))
-      (setq xs (mapcar #'(lambda (x) (elt x 0)) (list xy1 xy2)))
-      (setq ys (mapcar #'(lambda (x) (elt x 1)) (list xy1 xy2)))
-      (setq X_0sl (cart--xy2x0sl Xs xs))
-      (setq Y_0sl (cart--xy2x0sl Ys ys))
+           (xy1 (save-excursion (cart--gmc "Click on Point 1")))
+           (XY2 (cart--2dc "Point 2"))
+           (xy2 (save-excursion (cart--gmc "Click on Point 2")))
+           (Xs (mapcar #'(lambda (x) (elt x 0)) (list XY1 XY2)))
+           (Ys (mapcar #'(lambda (x) (elt x 1)) (list XY1 XY2)))
+           (xs (mapcar #'(lambda (x) (elt x 0)) (list xy1 xy2)))
+           (ys (mapcar #'(lambda (x) (elt x 1)) (list xy1 xy2)))
+           (X_0sl (cart--xy2x0sl Xs xs))
+           (Y_0sl (cart--xy2x0sl Ys ys)))
       (setf (alist-get 'X cart--XY_0sl) X_0sl)
       (setf (alist-get 'Y cart--XY_0sl) Y_0sl)
-      (list XY1 XY2 xy1 xy2)
-      ))
+      (list XY1 XY2 xy1 xy2)))
 #+end_src
 
 ** Wrapper functions for inserting a point, tikz-draw, etc.
@@ -108,8 +106,7 @@
     "Query point and insert coordinates"
     (interactive)
     (let ((XY (cart--gmc "Click on Point")))
-      (if XY (progn
-               (setq xy (cart--XY2xy XY))
+      (if XY (let ((xy (cart--XY2xy XY)))
                (insert (format "(%f, %f)" (elt xy 0) (elt xy 1)))
                xy))))
 
@@ -124,15 +121,26 @@
     (insert (format "\\draw%s " (cart--optbr dopts)))
     (while (cart-insert-point)
       (insert (format "%s -- " nopts)))
-    (delete-backward-char 4)
-    (insert ";\n"))
+    (if (y-or-n-p "Insert first point at the end?")
+        (progn
+          (cart--goto-begend)
+          (search-forward "(")
+          (while (cart--last-open-paren (1- (point)))
+            (search-forward "("))
+          (let ((pt1 (buffer-substring (point) (save-excursion (search-forward ")")))))
+            (move-end-of-line nil)
+            (insert (format "%s" pt1))))
+      (delete-backward-char 4))
+    (insert ";")
+    (do-auto-fill))
 
   (defun cart-tikz-node (&optional nopts nval)
     "Initiate a tikz \node instance and insert value given by user"
     (interactive "sNode options: \nsNode value: ")
     (insert (format "\\node%s at " (cart--optbr nopts)))
     (cart-insert-point)
-    (insert (format " \{%s\};\n" nval)))
+    (insert (format " \{%s\};" nval))
+    (do-auto-fill))
 #+end_src
 
 ** Wrapper functions for modifying existing tikz commands (draw, node)
@@ -153,35 +161,30 @@
 
   (defun cart--angle (vec1 vec2)
     "Returns the angle between the two vectors (given as lists)."
-    (let ((A1 (sqrt (apply '+ (mapcar #'(lambda (a) (expt a 2)) vec1))))
-          (A2 (sqrt (apply '+ (mapcar #'(lambda (a) (expt a 2)) vec2)))))
-      (setq Cth (/ (+ (* (elt vec1 0) (elt vec2 0))
-                      (* (elt vec1 1) (elt vec2 1)))
-                   (* A1 A2)))
-      (setq Sth (/ (- (* (elt vec1 0) (elt vec2 1))
-                      (* (elt vec2 0) (elt vec1 1)))
-                   (* A1 A2)))
+    (let ((Cth (+ (* (elt vec1 0) (elt vec2 0)) (* (elt vec1 1) (elt vec2 1))))
+          (Sth (- (* (elt vec1 0) (elt vec2 1)) (* (elt vec2 0) (elt vec1 1)))))
       (atan Sth Cth)))
 
   (defun cart--translate (&optional dx dy) 
     "Conduct rigid body translation on current object.
     DX, DY are x (horizontal) and y (vertical translation."
     (goto-char (point-min))
-    (while (setq p0 (search-forward "(" (point-max) t))
-      (if (cart--last-open-paren (1- p0))
-          (goto-char (1+ (point)))
-        (setq p1 (1- (search-forward ")")))
-        (setq cds
-              (mapcar 'string-to-number
-                      (split-string
-                       (replace-regexp-in-string
-                        "\n" "" (buffer-substring p0 p1))
-                       ",")))
-        (delete-region p0 p1)
-        (goto-char p0)
-        (setf (elt cds 0) (+ (elt cds 0) (or dx 0)))
-        (setf (elt cds 1) (+ (elt cds 1) (or dy 0)))
-        (insert (mapconcat 'number-to-string cds ",")))))
+    (let ((p0) (p1) (cds))
+      (while (setq p0 (search-forward "(" (point-max) t))
+        (if (cart--last-open-paren (1- p0))
+            (goto-char (1+ (point)))
+          (setq p1 (1- (search-forward ")")))
+          (setq cds
+                (mapcar 'string-to-number
+                        (split-string
+                         (replace-regexp-in-string
+                          "\n" "" (buffer-substring p0 p1))
+                         ",")))
+          (delete-region p0 p1)
+          (goto-char p0)
+          (setf (elt cds 0) (+ (elt cds 0) (or dx 0)))
+          (setf (elt cds 1) (+ (elt cds 1) (or dy 0)))
+          (insert (mapconcat 'number-to-string cds ","))))))
 
   (defun cart--rotate (&optional tht cpt rnds) 
     "Conduct rigid body rotation on current object.
@@ -189,43 +192,44 @@
   CPT is a list storing center point.
   RNDS is a boolean governing whether node contents should be rotated or not."
     (goto-char (point-min))
-    (while (setq p0 (search-forward "(" (point-max) t))
-      (if (cart--last-open-paren (1- p0))
-          (goto-char (1+ (point)))
-        (setq p1 (1- (search-forward ")")))
-        (setq cds
-              (mapcar 'string-to-number
-                      (split-string
-                       (replace-regexp-in-string
-                        "\n" "" (buffer-substring p0 p1))
-                       ",")))
-        (delete-region p0 p1)
-        (goto-char p0)
-        ;; Relative coordinates & Rotation
-        (setq cdsrel (list (- (elt cds 0) (or (elt cpt 0) 0))
-                           (- (elt cds 1) (or (elt cpt 1) 0))))
-        (setq Cth (cos (or tht 0)))
-        (setq Sth (sin (or tht 0)))
-        (setq Tcds (list (+ (- (* Cth (elt cdsrel 0)) (* Sth (elt cdsrel 1))) (or (elt cpt 0) 0))
-                         (+ (+ (* Sth (elt cdsrel 0)) (* Cth (elt cdsrel 1))) (or (elt cpt 1) 0))))
-        (insert (mapconcat 'number-to-string Tcds ","))))
+    (let ((p0) (p1) (cds))
+      (while (setq p0 (search-forward "(" (point-max) t))
+        (if (cart--last-open-paren (1- p0))
+            (goto-char (1+ (point)))
+          (setq p1 (1- (search-forward ")")))
+          (setq cds
+                (mapcar 'string-to-number
+                        (split-string
+                         (replace-regexp-in-string
+                          "\n" "" (buffer-substring p0 p1))
+                         ",")))
+          (delete-region p0 p1)
+          (goto-char p0)
+          ;; Relative coordinates & Rotation
+          (let* ((cdsrel (list (- (elt cds 0) (or (elt cpt 0) 0))
+                               (- (elt cds 1) (or (elt cpt 1) 0))))
+                 (Cth (cos (or tht 0)))
+                 (Sth (sin (or tht 0)))
+                 (Tcds (list (+ (- (* Cth (elt cdsrel 0)) (* Sth (elt cdsrel 1))) (or (elt cpt 0) 0))
+                             (+ (+ (* Sth (elt cdsrel 0)) (* Cth (elt cdsrel 1))) (or (elt cpt 1) 0)))))
+            (insert (mapconcat 'number-to-string Tcds ","))))))
     ;; Rotate nodes too, if needed
     (when rnds
       (goto-char (point-min))
       (while (search-forward "node" nil t)
         (if (not (eq (char-after) (string-to-char "[")))
             (insert (format "[rotate=%f]" (radians-to-degrees tht)))
-          (setq ebr (save-excursion (search-forward "]")))
-          (if (search-forward "rotate" ebr t)
-              (progn
-                (right-word)
-                (setq nwang (+ (number-at-point) (radians-to-degrees tht)))
-                (skip-chars-backward "0-9.-")
-                (delete-region (point) (progn (skip-chars-forward "0-9.-") (point)))
-                (insert (format "%f" nwang))
-                (goto-char ebr))
-            (goto-char (1- ebr))
-            (insert (format ", rotate=%f" (radians-to-degrees tht))))))))
+          (let ((ebr (save-excursion (search-forward "]"))))
+            (if (search-forward "rotate" ebr t)
+                (progn
+                  (right-word)
+                  (let ((nwang (+ (number-at-point) (radians-to-degrees tht))))
+                    (skip-chars-backward "0-9.-")
+                    (delete-region (point) (progn (skip-chars-forward "0-9.-") (point)))
+                    (insert (format "%f" nwang)))
+                  (goto-char ebr))
+              (goto-char (1- ebr))
+              (insert (format ", rotate=%f" (radians-to-degrees tht)))))))))
 
   (defun cart-translate-tikz ()
     "Translate objects in current sentence or under region using two points."
@@ -236,24 +240,24 @@
       (unless (listp XY0)
         (setq XY0 XYs)
         (setq XY1 (cart--gmc "You had only clicked on one point. Please click target point now")))
-      (setq xy0 (cart--XY2xy XY0))
-      (setq xy1 (cart--XY2xy XY1))
 
-      (setq dx (- (elt xy1 0) (elt xy0 0)))
-      (setq dy (- (elt xy1 1) (elt xy0 1)))
+      (let* ((xy0 (cart--XY2xy XY0))
+             (xy1 (cart--XY2xy XY1))
+             (dx (- (elt xy1 0) (elt xy0 0)))
+             (dy (- (elt xy1 1) (elt xy0 1))))
 
-      (if (region-active-p)
-          (narrow-to-region (region-beginning) (region-end))
-        (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
+        (if (region-active-p)
+            (narrow-to-region (region-beginning) (region-end))
+          (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
 
-      (cart--translate dx dy)
-      (goto-char (point-min))
-      (while (not (eobp))
-        (move-end-of-line nil)
+        (cart--translate dx dy)
+        (goto-char (point-min))
+        (while (not (eobp))
+          (move-end-of-line nil)
+          (do-auto-fill)
+          (forward-line))
         (do-auto-fill)
-        (forward-line))
-      (do-auto-fill)
-      (widen)))
+        (widen))))
 
   (defun cart-rotate-tikz ()
     "Rotate objects in current sentence or under region using a reference point and two target points."
@@ -262,32 +266,31 @@
            (XYs (cart--gmc "Click and drag the rotation target points "))
            (rnds (y-or-n-p "Rotate Node contents too?"))
            (XY0 (elt XYs 0))
-           (XY1 (elt XYs 1)))
-      (setq xyref (if XYref (cart--XY2xy XYref) (list 0 0)))
+           (XY1 (elt XYs 1))
+           (xyref (if XYref (cart--XY2xy XYref) (list 0 0))))
       (unless (listp XY0)
         (setq XY0 XYs)
         (setq XY1 (cart--gmc "You had only clicked on one point. Please click target point now")))
 
-      (setq xy0 (cart--XY2xy XY0))
-      (setq xy1 (cart--XY2xy XY1))
+      (let* ((xy0 (cart--XY2xy XY0))
+             (xy1 (cart--XY2xy XY1))
+             ;; Relative Coordinates
+             (xy0 (list (- (elt xy0 0) (elt xyref 0)) (- (elt xy0 1) (elt xyref 1))))
+             (xy1 (list (- (elt xy1 0) (elt xyref 0)) (- (elt xy1 1) (elt xyref 1))))
+             (theta (cart--angle xy0 xy1)))
 
-      ;; Relative Coordinates
-      (setq xy0 (list (- (elt xy0 0) (elt xyref 0)) (- (elt xy0 1) (elt xyref 1))))
-      (setq xy1 (list (- (elt xy1 0) (elt xyref 0)) (- (elt xy1 1) (elt xyref 1))))
-      (setq theta (cart--angle xy0 xy1))
+        (if (region-active-p)
+            (narrow-to-region (region-beginning) (region-end))
+          (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
 
-      (if (region-active-p)
-          (narrow-to-region (region-beginning) (region-end))
-        (narrow-to-region (cart--goto-begend) (cart--goto-begend t)))
-
-      (cart--rotate theta xyref rnds)
-      (goto-char (point-min))
-      (while (not (eobp))
-        (move-end-of-line nil)
+        (cart--rotate theta xyref rnds)
+        (goto-char (point-min))
+        (while (not (eobp))
+          (move-end-of-line nil)
+          (do-auto-fill)
+          (forward-line))
         (do-auto-fill)
-        (forward-line))
-      (do-auto-fill)
-      (widen)))
+        (widen))))
 #+end_src
 
 ** Provide as PACKAGE
