Allows customization of format specification.

--- a/cart.org
+++ b/cart.org
@@ -52,16 +52,21 @@
 
 #+end_src
 ** Define Minor-Mode and Global Variables
-#+begin_src emacs-lisp :tangle yes :results none 
+#+begin_src emacs-lisp :tangle yes :results none
   (defcustom cart--XY_0sl '((X . (0.0 1.0))
                           (Y . (0.0 1.0)))
     "These are the calibration values.
   The behavior will be identical across sessions if these are saved."
-    :group 'cart
-    :type 'cons)
+    :type 'cons
+    :group 'cart)
 
   (defcustom cart-keymap-prefix "C-x a"
     "The prefix for `cart-mode' key bindings."
+    :type 'string
+    :group 'cart)
+
+  (defcustom cart--nfmt "%f"
+    "Format specifier for the numbers. Defaults to \"%f\"."
     :type 'string
     :group 'cart)
 
@@ -81,7 +86,6 @@
           (cons (cart--key "n") #'cart-tikz-node)
           (cons (cart--key "t") #'cart-translate-tikz)
           (cons (cart--key "r") #'cart-rotate-tikz)))
-
 #+end_src
 
 ** Define functions for getting coordinates on screen
@@ -173,7 +177,10 @@
     (interactive)
     (let ((XY (cart--gmc prompt)))
       (if XY (let ((xy (cart--XY2xy XY)))
-               (insert (format "(%f, %f)" (elt xy 0) (elt xy 1)))
+               (insert
+                (format
+                 (concat "(" cart--nfmt ", " cart--nfmt ")")
+                 (elt xy 0) (elt xy 1)))
                xy))))
 
   (defun cart--optbr (&optional opts)
@@ -290,7 +297,7 @@
           (goto-char p0)
           (setf (elt cds 0) (+ (elt cds 0) (or dx 0)))
           (setf (elt cds 1) (+ (elt cds 1) (or dy 0)))
-          (insert (mapconcat 'number-to-string cds ","))))))
+          (insert (format (concat cart--nfmt ", " cart--nfmt) (elt cds 0) (elt cds 1)))))))
 
   (defun cart--rotate (&optional tht cpt rnds)
     "Conduct rigid body rotation on current context.
@@ -323,14 +330,15 @@
                  (Sth (sin (or tht 0)))
                  (Tcds (list (+ (- (* Cth (elt cdsrel 0)) (* Sth (elt cdsrel 1))) (or (elt cpt 0) 0))
                              (+ (+ (* Sth (elt cdsrel 0)) (* Cth (elt cdsrel 1))) (or (elt cpt 1) 0)))))
-            (insert (mapconcat 'number-to-string Tcds ","))))))
+            (insert (format (concat cart--nfmt ", " cart--nfmt) (elt Tcds 0) (elt Tcds 1)))))))
     ;; Rotate nodes too, if needed
     (when rnds
       (goto-char (point-min))
       (while (search-forward "node" nil t)
         (unless (cart--last-open-paren)
           (if (not (eq (char-after) (string-to-char "[")))
-              (insert (format "[rotate=%f]" (radians-to-degrees tht)))
+              (insert (format (concat "[rotate=" cart--nfmt "]")
+                              (radians-to-degrees tht)))
             (let ((ebr (save-excursion (search-forward "]"))))
               (if (search-forward "rotate" ebr t)
                   (progn
@@ -338,10 +346,11 @@
                     (let ((nwang (+ (number-at-point) (radians-to-degrees tht))))
                       (skip-chars-backward "0-9.-")
                       (delete-region (point) (progn (skip-chars-forward "0-9.-") (point)))
-                      (insert (format "%f" nwang)))
+                      (insert (format cart--nfmt nwang)))
                     (goto-char ebr))
                 (goto-char (1- ebr))
-                (insert (format ", rotate=%f" (radians-to-degrees tht))))))))))
+                (insert (format (concat ", rotate=" cart--nfmt)
+                                (radians-to-degrees tht))))))))))
 
   (defun cart-translate-tikz ()
     "Translate objects in current Tikz/Pgf statement/region.
