--- a/README.org
+++ b/README.org
@@ -87,6 +87,38 @@ Usage is quite straightforward. During the first time, it's recommended to follo
 #+ATTR_ORG: :width 100px
 [[./figs/fig4.png]]
 
+** Personal Tips for Beamer
+Since it is often the case in presentations to want graphical objects "pop-up" independent of the remaining content on the slide, I use the following preamble in each of my tex files to define a "remember picture" style:
+#+begin_src latex
+  \usepackage{tikz}
+
+  \usetikzlibrary{shapes.arrows,shapes.callouts,patterns,decorations.pathmorphing,
+    decorations.markings,shapes,arrows.meta,positioning}
+  \tikzset{
+    invisible/.style={opacity=0},
+    visible on/.style={alt={#1{}{invisible}}},
+    alt/.code args={<#1>#2#3}{%
+      \alt<#1>{\pgfkeysalso{#2}}{\pgfkeysalso{#3}} % \pgfkeysalso doesn't change the path
+    },
+  }
+  \tikzset{
+    highlight on/.style={alt={#1{fill=red!80!black,color=red!80!black}{fill=gray!30!white,color=gray!30!white}}},
+  }
+  \tikzset{boximg/.style={remember picture,black,thick,draw,inner sep=0pt,outer sep=0pt}}
+#+end_src
+Apart from remember picture, the above also enables the "visible on" property for all the tikz objects, where you can specify overlay information.
+
+I often have my tikzpicture environment setup in the following fashion so that its centered at the middle of the page. An example may be found in the [[file:test/test.tex][test folder]].
+#+begin_src latex
+  \begin{tikzpicture}[overlay,remember picture]
+    \pgftransformshift{\pgfpointanchor{current page}{center}}
+
+    % Insert draw/node commands here
+
+  \end{tikzpicture}
+#+end_src
+
+
 * Possible Improvements
 1. It might be interesting to add capabilities to capture mouse drag events and associate them with the curve features of Tikz.
 2. Integration of Tikz/Pgf variables.
