--- a/README.org
+++ b/README.org
@@ -144,7 +144,7 @@ I often have my tikzpicture environment setup in the following fashion so that i
       #+begin_src sh
         gsettings set org.gnome.desktop.interface locate-pointer true
       #+end_src
-6. Using the relative coordinates with respect to the pdf page directly (the screen pixel coordinates are used currently) could add robustness.
+6. Using the ":width" property (and other properties) of the png image (=pdf-tools= displays the pages as png images) to use pdf-relative coordinates to add robustness across window size changes.
 
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
