--- a/README.org
+++ b/README.org
@@ -44,37 +44,40 @@ Usage is quite straightforward. During the first time, it's recommended to follo
 
 2. *Insertion: Point*: You can insert the coordinates of any point at the current point by calling =cart-insert-point= (default kbd: =C-x a p=). It will prompt the user to click on any point on the screen. The pixel coordinates from the read-event will be transformed using the calibration conducted above.
 
-3. *Insertion: Tikz Draw*: Interactive tikz-draw can be initiated by calling =cart-tikz-draw= (default kbd: =C-x a d=). It will first prompt the user for "draw options" (string options to be passed as =\draw[options]=) and "node options" (string options to be passed as =(pt_x, pt_y)options=) before prompting the user to start clicking the desired points. The node options (if given) will be applied to all the points. All the points will be jointed using "=--=" (implying straight lines). The selection can be stopped by triggering any event other than =down-mouse-1=(left click), hitting =RET= for example. 
+3. *Insertion: Tikz Draw*: Interactive tikz-draw can be initiated by calling =cart-tikz-draw= (default kbd: =C-x a d=). It will first prompt the user for "draw options" (string options to be passed as =\draw[options]=) and "node options" (string options to be passed as =(pt_x, pt_y)options=) before prompting the user to start clicking the desired points. The node options (if given) will be applied to all the points. All the points will be jointed using "=--=" (implying straight lines). The selection can be stopped by triggering any event other than =down-mouse-1=(left click), hitting =RET= for example. =cart-tikz-draw= also supports the specification of local tangents by clicking and dragging through the =tikz= =controls= interface.
 
 4. *Insertion: Tikz Node*: Interactive tikz-nodes can be initiated by calling =cart-tikz-node= (default kbd: =C-x a n=). It will first prompt the user for "node options" (string options to be passed as =\node[options]=) and "node value" (string value to be passed as =\node[...] at (pt_x, pt_y) {value};=), before prompting the user to choose the point (only one point in this case).
 
-5. *Insertion: Tikz Draw Plot Coordinates*: Interactive tikz-draw plot coordinates can be initiated by calling =cart-tikz-coordinates= (default kbd: =C-x a c=). It will first prompt the user for "draw options" (string options to be passed as =\draw[options]=) before prompting the user to start clicking the desired points. The argument =[smooth]= will be passed to plot. The selection can be stopped by triggering any event other than =down-mouse-1=(left click), hitting =RET= for example.
+5. *Insertion: Tikz circle*: Interactive tikz-draw initiated and a circle is drawn through the two points the user clicks & drags (or clicks sequentially). The radius defaults to the mean point. 
 
-6. *Transformation: Translation*: Either start by choosing a region (ensure you start from the first "\" statement and select until the last ";" character) or having point inside any Tikz/Pgf command statement bound by "\" & ";". Now call =cart-translate-tikz= (default kbd: =C-x a t=) and select the start and end points by either dragging or clicking sequentially.
+6. *Insertion: Tikz Draw Plot Coordinates*: Interactive tikz-draw plot coordinates can be initiated by calling =cart-tikz-coordinates= (default kbd: =C-x a c=). It will first prompt the user for "draw options" (string options to be passed as =\draw[options]=) before prompting the user to start clicking the desired points. The argument =[smooth]= will be passed to plot. The selection can be stopped by triggering any event other than =down-mouse-1=(left click), hitting =RET= for example.
 
-7. *Transformation: Rotation*: Start just like for translation. Now call =cart-rotate-tikz= (default kbd: =C-x a r=) and select the center point, and start-end points by dragging/clicking sequentially. A prompt will come asking if the node contents should also be rotated (handled through the Tikz =rotate= fields of the nodes). Rotation will be conducted so as to move the start point feature to the end point.
+7. *Transformation: Translation*: Either start by choosing a region (ensure you start from the first "\" statement and select until the last ";" character) or having point inside any Tikz/Pgf command statement bound by "\" & ";". Now call =cart-translate-tikz= (default kbd: =C-x a t=) and select the start and end points by either dragging or clicking sequentially.
 
-8. *Transformation: Scaling*: Start just like for translation. Now call =cart-scale-tikz= (default kbd: =C-x a s=) and select the reference point, and start-end points by dragging/clicking sequentially. A prompt will come asking if the node contents should also be rotated (handled through the Tikz =rotate= fields of the nodes). Scaling will be conducted so as to move the start point feature to the end point.
+8. *Transformation: Rotation*: Start just like for translation. Now call =cart-rotate-tikz= (default kbd: =C-x a r=) and select the center point, and start-end points by dragging/clicking sequentially. A prompt will come asking if the node contents should also be rotated (handled through the Tikz =rotate= fields of the nodes). Rotation will be conducted so as to move the start point feature to the end point.
+
+9. *Transformation: Scaling*: Start just like for translation. Now call =cart-scale-tikz= (default kbd: =C-x a s=) and select the reference point, and start-end points by dragging/clicking sequentially. A prompt will come asking if the node contents should also be rotated (handled through the Tikz =rotate= fields of the nodes). Scaling will be conducted so as to move the start point feature to the end point.
 
 
 #+CAPTION: Default Keybindings
-| Keybinding       | Command               | Description                 |
-|------------------+-----------------------+-----------------------------|
-| C-x a            | cart-keymap-prefix    | Not callable.               |
-| C-x a c          | cart-calibrate        | Initiate Calibration.       |
-|------------------+-----------------------+-----------------------------|
-| *Insertion*      |                       |                             |
-|------------------+-----------------------+-----------------------------|
-| C-x a p          | cart-insert-point     | Insert single point.        |
-| C-x a n          | cart-tikz-node        | Insert Tikz node.           |
-| C-x a d          | cart-tikz-draw        | Insert Tikz draw.           |
-| C-x a c          | cart-tikz-coordinates | Insert Tikz coordinates.    |
-|------------------+-----------------------+-----------------------------|
-| *Transformation* |                       |                             |
-|------------------+-----------------------+-----------------------------|
-| C-x a t          | cart-translate-tikz   | Translate region/statement. |
-| C-x a r          | cart-rotate-tikz      | Rotate region/statement.    |
-| C-x a s          | cart-scale-tikz       | Scale region/statement.     |
+| Keybinding       | Command               | Description                     |
+|------------------+-----------------------+---------------------------------|
+| C-x a            | cart-keymap-prefix    | Not callable.                   |
+| C-x a C          | cart-calibrate        | Initiate Calibration.           |
+|------------------+-----------------------+---------------------------------|
+| *Insertion*      |                       |                                 |
+|------------------+-----------------------+---------------------------------|
+| C-x a p          | cart-insert-point     | Insert single point.            |
+| C-x a n          | cart-tikz-node        | Insert Tikz node.               |
+| C-x a d          | cart-tikz-draw        | Insert Tikz draw.               |
+| C-x a e          | cart-tikz-circle      | Insert Tikz circle (with draw). |
+| C-x a r          | cart-tikz-coordinates | Insert Tikz coordinates.        |
+|------------------+-----------------------+---------------------------------|
+| *Transformation* |                       |                                 |
+|------------------+-----------------------+---------------------------------|
+| C-x a t          | cart-translate-tikz   | Translate region/statement.     |
+| C-x a r          | cart-rotate-tikz      | Rotate region/statement.        |
+| C-x a s          | cart-scale-tikz       | Scale region/statement.         |
 ** Examples
 #+CAPTION: Example 1 of a graphic drawn using =tikz= and =cart.el=
 #+ATTR_HTML: :width 800px
@@ -116,12 +119,10 @@ I often have my tikzpicture environment setup in the following fashion so that i
 
 
 * Possible Improvements
-1. It might be interesting to add capabilities to capture mouse drag events and associate them with the curve features of Tikz.
-2. Integration of Tikz/Pgf variables.
-3. Making node information for each point in draw possible as an option (instead of having to click on successive points repeatedly and have common node properties).
-4. =cart-scale-tikz= currently doesn't scale circle radius fields. Fixing this just for circles seems easy enough but something more general would be better.
-5. Some mechanism simulating real-time feedback.
-   
+1. Integration of Tikz/Pgf variables.
+2. Making node information for each point in draw possible as an option (instead of having to click on successive points repeatedly and have common node properties).
+3. =cart-scale-tikz= currently doesn't scale circle radius fields. Fixing this just for circles seems easy enough but something more general would be better.
+4. Some mechanism simulating real-time feedback.   
    Two ideas for this:
    1. Must experiment with *spawning a transparent frame* spanning the whole screen until the user input is done. Here's elisp code to create a transparent frame without modeline & minibuffer. Perhaps if we can invoke some emacs-native WYSIWYG drawing interface while the user clicks, this could be a solution. How expensive this will be is up for discussion.
       This becomes quite attractive from Emacs 29, which allows explicitly setting background transparency independent of the foreground as follows (following only works in emacs 29+).
@@ -140,9 +141,19 @@ I often have my tikzpicture environment setup in the following fashion so that i
       #+begin_src sh
         gsettings set org.gnome.desktop.interface locate-pointer true
       #+end_src
-6. Using the ":width" property (and other properties) of the png image (=pdf-tools= displays the pages as png images) to use pdf-relative coordinates to add robustness across window size changes.
+5. Using the ":width" property (and other properties) of the png image (=pdf-tools= displays the pages as png images) to use pdf-relative coordinates to add robustness across window size changes.
 
 * Recommended Reading/Interesting Repositories
 1. The [[https://pgf-tikz.github.io/pgf/pgfmanual.pdf][documentation of Tikz & PGF]].
 2. The [[https://github.com/misohena/el-easydraw][el-easydraw]] package by [[https://github.com/misohena][misohena]] is WYSIWYG implementation of SVG drawing in emacs.
 3. The [[https://github.com/dalanicolai/pymupdf-mode.el][pymupdf-mode]] implements a version of WYSIWYG drawing using python and zathura. I personally feel that a more elegant solution using pure elisp is possible.
+
+** Some quotes from around
+#+begin_quote Tikz/PGF Manual
+With TikZ you get all the advantages of the “TEX-approach to typesetting” for your graphics:
+quick creation of simple graphics, precise positioning, the use of macros, often superior typography. You also
+inherit all the disadvantages: steep learning curve, no wysiwyg, small changes require a long recompilation
+time, and the code does not really “show” how things will look like.
+
+-- Tikz/PGF Manual
+#+end_quote
